gtk_sources = files(
  'gsynaptic.cc',
  'gtkpkglist.cc',
  'rgcacheprogress.cc',
  'rgpkgcdrom.cc',
  'rgpreferenceswindow.cc',
  'rgfetchprogress.cc',
  'rgfiltermanager.cc',
  'rgfindwindow.cc',
  'rgiconlegend.cc',
  'rglogview.cc',
  'rgutils.cc',
  'rgpackagestatus.cc',
  'rgsetoptwindow.cc',
  'rgdummyinstallprogress.cc',
  'rgdebinstallprogress.cc',
  'rgterminstallprogress.cc',
  'rginstallprogress.cc',
  'rgslideshow.cc',
  'rgtaskswin.cc',
  'rgcdscanner.cc',
  'rgmainwindow.cc',
  'rgpkgdetails.cc',
  'rgrepositorywin.cc',
  'rgsummarywindow.cc',
  'rgchangelogdialog.cc',
  'rgchangeswindow.cc',
  'rguserdialog.cc',
  'rgwindow.cc',
  'rggtkbuilderwindow.cc',
  'rgpkgtreeview.cc',
)

executable(
  'synaptic',
  gtk_sources,
  install: true,
  install_dir: get_option('bindir'),
  cpp_args: base_cpp_args + gtk_cpp_args + rpm_compile_args,
  dependencies: gui_deps,
  include_directories: [root_inc, common_inc, gtk_inc],
  link_with: libsynaptic,
)

install_data(
  files(
    'gtkbuilder/dialog_authentication.ui',
    'gtkbuilder/dialog_changelog.ui',
    'gtkbuilder/dialog_change_version.ui',
    'gtkbuilder/dialog_conffile.ui',
    'gtkbuilder/dialog_quit.ui',
    'gtkbuilder/dialog_task_descr.ui',
    'gtkbuilder/dialog_unmet.ui',
    'gtkbuilder/dialog_update_failed.ui',
    'gtkbuilder/dialog_upgrade.ui',
    'gtkbuilder/dialog_welcome.ui',
    'gtkbuilder/window_changes.ui',
    'gtkbuilder/window_details.ui',
    'gtkbuilder/window_disc_name.ui',
    'gtkbuilder/window_fetch.ui',
    'gtkbuilder/window_filters.ui',
    'gtkbuilder/window_find.ui',
    'gtkbuilder/window_iconlegend.ui',
    'gtkbuilder/window_logview.ui',
    'gtkbuilder/window_main.ui',
    'gtkbuilder/window_preferences.ui',
    'gtkbuilder/window_repositories.ui',
    'gtkbuilder/window_rgdebinstall_progress.ui',
    'gtkbuilder/window_rginstall_progress_msgs.ui',
    'gtkbuilder/window_rginstall_progress.ui',
    'gtkbuilder/window_setopt.ui',
    'gtkbuilder/window_summary.ui',
    'gtkbuilder/window_tasks.ui',
    'gtkbuilder/window_zvtinstallprogress.ui',
  ),
  install_dir: join_paths(get_option('datadir'), 'synaptic', 'gtkbuilder'),
)
