# Makefile.am for the pixmaps

appicondir = $(datadir)/synaptic/pixmaps
appicon_DATA = synaptic_48x48.png 

buttondir =  $(datadir)/synaptic/glade
button_DATA = update_small.png \
	      upgrade_small.png \
	      distupgrade_small.png\
              proceed_small.png \
	      pref_vpaned.xpm \
	      pref_hpaned.xpm \
	      stock_filter-data-by-criteria.png\
	      stock_filter-navigator.png
		      
status_icondir = $(datadir)/synaptic/pixmaps
status_icon_DATA = package-available-locked.png \
		   package-available.png \
		   package-broken.png \
		   package-downgrade.png  \
		   package-install.png \
		   package-installed-locked.png \
		   package-installed-outdated.png \
		   package-installed-updated.png \
		   package-new.png \
		   package-purge.png \
		   package-remove.png \
		   package-upgrade.png

		      
		     

abouticondir = $(datadir)/synaptic/glade
abouticon_DATA = deb.png \
		 cnc.png \
		 logo.png

EXTRA_DIST=\
	alert.xpm\
	alertM.xpm\
	brokenM.xpm\
	cdrom.xpm\
	cnc.xpm\
	cnc2.xpm\
	deb.xpm\
	distupgrade.xpm\
	downgradeM.xpm\
	filter.xpm\
	find.xpm\
	fixbroken.xpm\
	heldM.xpm\
	holdM.xpm \
	installM.xpm\
	keepM.xpm \
	logo.xpm\
	newM.xpm \
	options.xpm\
	proceed.xpm\
	removeM.xpm\
	sources.xpm\
	stop.xpm\
	update.xpm\
	upgrade.xpm\
	upgradeM.xpm\
	up.xpm\
	down.xpm\
	synaptic_mini.xpm\
	stock_filter-data-by-criteria.png\
	stock_filter-navigator.png\
	$(appicon_DATA) \
	$(button_DATA) \
	$(abouticon_DATA) \
	$(status_icon_DATA)

