# Makefile.am for the pixmaps

SUBDIRS = hicolor

appicondir = $(datadir)/pixmaps
appicon_DATA = synaptic.png 

buttondir =  $(datadir)/synaptic/gtkbuilder
button_DATA = update_small.png \
	      upgrade_small.png \
	      distupgrade_small.png\
              proceed_small.png \
	      synaptic_mini.xpm \
	      synaptic.xpm \
	      pref_vpaned.xpm \
	      pref_hpaned.xpm \
	      stock_filter-data-by-criteria.png\
	      stock_filter-navigator.png \
	      stock_menu_about.png \
	      stock_help-book.png

fetchstatusdir = $(datadir)/synaptic/pixmaps
fetchstatus_DATA = green.png \
		   yellow.png \
		   red.png

abouticondir = $(datadir)/synaptic/gtkbuilder
abouticon_DATA = deb.png \
		 cnc.png \
		 logo.png

EXTRA_DIST=\
	alert.xpm\
	alertM.xpm\
	brokenM.xpm\
	cdrom.xpm\
	cnc.xpm\
	cnc2.xpm\
	deb.xpm\
	distupgrade.xpm\
	downgradeM.xpm\
	filter.xpm\
	find.xpm\
	fixbroken.xpm\
	heldM.xpm\
	holdM.xpm \
	installM.xpm\
	keepM.xpm \
	logo.xpm\
	newM.xpm \
	options.xpm\
	proceed.xpm\
	removeM.xpm\
	sources.xpm\
	stop.xpm\
	update.xpm\
	upgrade.xpm\
	upgradeM.xpm\
	up.xpm\
	down.xpm\
	synaptic_mini.xpm\
	stock_filter-data-by-criteria.png\
	stock_filter-navigator.png\
	$(appicon_DATA) \
	$(button_DATA) \
	$(abouticon_DATA) \
	$(fetchstatus_DATA)

