gladedir = $(datadir)/synaptic/glade/

glade_DATA =                            \
	window_about.glade  \
	window_changes.glade  \
	window_details.glade \
	window_disc_name.glade  \
	window_fetch.glade  \
	window_find.glade  \
	window_filters.glade \
	window_iconlegend.glade \
	window_logview.glade \
	dialog_changelog.glade \
	dialog_conffile.glade \
	dialog_change_version.glade \
        window_main.glade \
	window_preferences.glade \
	dialog_quit.glade  \
	window_rginstall_progress.glade \
	window_rgdebinstall_progress.glade \
	window_rginstall_progress_msgs.glade \
	window_repositories.glade \
	window_setopt.glade  \
	window_summary.glade \
	window_tasks.glade \
	dialog_download_error.glade \
	dialog_task_descr.glade \
	dialog_unmet.glade \
	dialog_update_failed.glade \
	dialog_update_outdated.glade \
	dialog_upgrade.glade \
	dialog_welcome.glade \
	window_zvtinstallprogress.glade \
	dialog_authentication.glade


EXTRA_DIST = $(glade_DATA) 
