gtkbuilderdir = $(datadir)/synaptic/gtkbuilder/

gtkbuilder_DATA =                            \
	window_about.ui  \
	window_changes.ui  \
	window_details.ui \
	window_disc_name.ui  \
	window_fetch.ui  \
	window_find.ui  \
	window_filters.ui \
	window_iconlegend.ui \
	window_logview.ui \
	dialog_changelog.ui \
	dialog_conffile.ui \
	dialog_change_version.ui \
        window_main.ui \
	window_preferences.ui \
	dialog_quit.ui  \
	window_rginstall_progress.ui \
	window_rgdebinstall_progress.ui \
	window_rginstall_progress_msgs.ui \
	window_repositories.ui \
	window_setopt.ui  \
	window_summary.ui \
	window_tasks.ui \
	dialog_download_error.ui \
	dialog_task_descr.ui \
	dialog_unmet.ui \
	dialog_update_failed.ui \
	dialog_update_outdated.ui \
	dialog_upgrade.ui \
	dialog_welcome.ui \
	window_zvtinstallprogress.ui \
	dialog_authentication.ui


EXTRA_DIST = $(gtkbuilder_DATA) 
