gtkbuilderdir = $(datadir)/synaptic/gtkbuilder/

gtkbuilder_DATA = \
  dialog_authentication.ui \
  dialog_changelog.ui \
  dialog_change_version.ui \
  dialog_conffile.ui \
  dialog_disc_label.ui \
  dialog_download_error.ui \
  dialog_new_repositroy.ui \
  dialog_quit.ui \
  dialog_task_descr.ui \
  dialog_unmet.ui \
  dialog_update_failed.ui \
  dialog_update_outdated.ui \
  dialog_upgrade.ui \
  dialog_welcome.ui \
  window_changes.ui \
  window_details.ui \
  window_disc_name.ui \
  window_fetch.ui \
  window_filters.ui \
  window_find.ui \
  window_iconlegend.ui \
  window_logview.ui \
  window_main.ui \
  window_preferences.ui \
  window_repositories.ui \
  window_rgdebinstall_progress.ui \
  window_rginstall_progress_msgs.ui \
  window_rginstall_progress.ui \
  window_setopt.ui \
  window_summary.ui \
  window_tasks.ui \
  window_zvtinstallprogress.ui

EXTRA_DIST = $(gtkbuilder_DATA) 
