
status_icondir = $(datadir)/icons/hicolor/16x16/apps
status_icon_DATA = package-available-locked.png \
                  package-available.png \
                  package-broken.png \
                  package-downgrade.png  \
                  package-install.png \
                  package-reinstall.png \
                  package-installed-locked.png \
                  package-installed-outdated.png \
                  package-installed-updated.png \
                  package-new.png \
                  package-purge.png \
                  package-remove.png \
                  package-supported.png \
                  package-upgrade.png


EXTRA_DIST=$(status_icon_DATA)